Update Authentication
